# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Added the db2-discover script. This can find DB2 servers by
  sending a UDP broadcast. [Patrik]

o [NSE] Added the hostmap script by Ange Gutek. This uses a third-party
  database to look up other hostnames mapping to the target.

o [NSE] Added the ability to send and receive on unconnected sockets.
  This can be used, for example, to receive UDP broadcasts without
  using pcap. A number of scripts have been changed so that they can
  work as prerule scripts to discover services by UDP broadcasting,
  optionally add the discovered targets to the scanning queue:
    - ms-sql-info
    - upnp-info
    - dns-service-discovery
  The nmap.new_socket function can now optionally take a default
  protocol and address family, which will be used if the socket is not
  connected. There is a new nmap.sendto function to be used with
  unconnected UDP sockets. [David, Patrik]

o [NSE] Improved ssh2's kex_init() parameters: all of the algorithm
  and language lists can be set using new keys in the "options" table
  argument. These all default to the same value used before. Also, the
  required "cookie" argument is now replaced by an optional "cookie"
  key in the "options" table, defaulting to random bytes as the RFC
  says the value should be. [Kris]

o Ncat now logs Nsock debug output to stderr instead of stdout, like
  its other debug messages. [David]

o Updated to the latest config.guess and config.sub. Thanks to Ty
  Miller for a reminder. [David]

o [NSE] Added nat-pmp-info script that uses the nat-pmp service to
  discover the external IP address of a router. [Patrik]

o [NSE] Added prerule support to snmp-interfaces and the ability to
  add the host's interface addresses to the scanning queue.  The new
  script arguments used for this functionality are "host" (required)
  and "port" (optional). [Kris]

o [NSE] Added the resolveall prerule script which takes a table of